tests/snapshots/snapshots__malformed__corrupt-styles--skips.docx.snap
---
source: tests/snapshots.rs
expression: output
---
Fixture Document

Plain paragraph with bold, italic, and struck runs.

Style-bold paragraph with a NotBold-styled span inside.

Lists

1. First numbered

2. Second numbered

   - a) Alpha sub one

   - b) Alpha sub two

        - i. Roman sub sub

3. Third numbered

Interrupting paragraph between lists.

4. Fourth, continuing the count

- IV. Roman starting at four

- V. Roman five

- Bullet one

- Bullet two

  - Nested bullet

Table

|  |  |  |
| --- | --- | --- |
| Wide head |  | End |
| Tall | B2 | C2 |
|  | B3 | C3 |

Notes and special text

Music clef 𝄞 appears before this footnote[^1] reference.

An endnote follows here[^2].

Persian with ZWNJ: می‌خواهم. Family emoji: 👨‍👩‍👧.

Markdown specials: \*stars* \_under_ \[bracket] \`tick` #hash 1. dotted | pipe.

Links and anchors

External link to [example](https://example.com/page).

Relative link to [a sibling file](../../fixture-src/sibling.odt).

<a id="plainmark"></a>This plain paragraph carries a bookmark.

Jump to [the bookmarked paragraph](#plainmark).

Objects

Inline image: tiny red dot done.

Text box:  after the box.

Inside the text box.

Quote and code

Value below one millionth: 0.0000004 should survive.

[^1]: Footnote after an astral character.

[^2]: Endnote body text.
