tests/snapshots/snapshots__malformed__empty--errors.docx.snap
---
source: tests/snapshots.rs
expression: output
---
ERROR: malformed document: not a readable zip archive: invalid Zip archive: Could not find EOCD
