tests/snapshots/snapshots__malformed__selfref--errors.epub.snap
---
source: tests/snapshots.rs
expression: output
---
ERROR: malformed document: no chapter in the book could be read
