tests/snapshots/snapshots__malformed__truncated--errors.doc.snap
---
source: tests/snapshots.rs
expression: output
---
ERROR: malformed document: not an OLE2 compound file: Malformed FAT (FAT has 39 entries, but file has only 7 sectors)
